--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,11 @@
+@import url('https://fonts.cdnfonts.com/css/super-mario-world-text-box');
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    overflow-x: hidden;
+    overflow-y: hidden;
 }
 
 body{
@@ -11,11 +15,23 @@ body{
 .game-board {
     width: 90%;
     height: 100vh;
-    border-bottom: 5px solid rgb(35, 160, 35);
+    border-bottom: 60px solid rgb(35, 160, 35);
     margin: 0 auto;
     position: relative;
     overflow: hidden;
     background: linear-gradient(#87CEEB, #E0F6FF);
+}
+
+#chao{
+    left: 5%;
+    position: absolute;
+    bottom: 0;
+    height: 60px;
+    width: 90%;
+    background-image: url('../images/roof.png');
+    background-size: 100px 100%;
+    background-repeat: repeat-x;
+    background-color: #44aa24;
 }
 
 .pipe {
@@ -36,10 +52,79 @@ body{
 }
 
 .clouds {
+    top: 20%;
     position: absolute;
     width: 750px;
     animation: clouds-animation 30s infinite linear;
 }
+
+#placar{
+    font-family: 'Super Mario World Text Box', sans-serif;
+    text-align: left;
+    padding: 10px;
+    align-items: center;
+    position: absolute;
+    left: 5%;
+    top: 30px;
+    color: white;
+    background-color: #00000036;
+    border-radius: 10px;
+    font-size: 30px;
+    z-index: +10;
+    width: 250px;
+    height: 50px;
+}
+
+button{
+    margin-top: 20px;
+    font-size: 30px;
+    font-family: 'Super Mario World Text Box', sans-serif;
+    width: 290px;
+    height: 100px;
+    align-items: center;
+    text-align: center;
+    border: none;
+    border-radius: 25px;
+    background-image: url('../images/buttonReset.jpg');
+    background-size: 100% 140%;
+    background-position: center;
+    background-color: transparent;
+    cursor: pointer;
+    transition: .2s;
+    z-index: +21;
+}
+
+button:hover{
+    transition: .2s;
+    filter: brightness(80%);
+}
+
+.game-over{
+    position: absolute;
+    height: 100vh;
+    width: 100%;
+    background-color: rgba(0, 0, 0, 0.336);
+    z-index: +20;
+}
+
+.game-over-text{
+    display: flex;
+    flex-direction: column;
+    font-size: 30px;
+    font-family: 'Super Mario World Text Box', sans-serif;
+    position: absolute;
+    align-items: center;
+    text-align: center;
+    width: fit-content;
+    height: 500px;
+    top: 43%;
+    left: 40%;
+}
+
+.none{
+    display: none;
+}
+
 
 @keyframes pipe-animation {
     from{
